# sendf

./: .gitignore  Makefile  README  README.md  pyproject.toml  requirements.txt  sendf.py  setup.cfg  setup.py  tests.py  upnp.py
.github/workflows/: python-app.yml  test-suite.yml
scripts/: sendf
tests/: __init__.py
