[project]
name = "sendf"
description = "Easily send files"
version = "0.0.5"
authors = [{name = "Hui Peng Hu", email = "woohp135@gmail.com"}]
requires-python = ">=3.10"
dependencies = ["starlette==0.32.0.post1", "uvicorn==0.24.0.post1"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "ipdb",
    "isort",
    "mypy >= 1.7",
]

[project.scripts]
sendf = "sendf:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []
namespaces = true

[tool.black]
line-length = 120
target-version = ["py311"]
preview = true

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 5

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
extra_checks = true
allow_untyped_defs = false
allow_any_generics = false
plugins = "numpy.typing.mypy_plugin"
