[project]
name = "sendf"
description = "Easily send files"
version = "0.0.5"
authors = [{ name = "Hui Peng Hu", email = "woohp135@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["starlette==0.41.1", "uvicorn==0.32.1"]

[project.optional-dependencies]
dev = ["ipdb", "mypy >= 1.13", "ruff >= 0.8.2"]

[project.scripts]
sendf = "sendf:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []
namespaces = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
extra_checks = true
allow_untyped_defs = false
allow_any_generics = false

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "U", "YTT", "B", "C4", "PT", "Q", "SIM", "FURB"]
ignore = ["E203", "B028", "B905", "C408", "SIM102", "SIM108"]
preview = true
